删除和查询指定接口
